--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,10 @@
         <blockquote>
             curl
             <pre>
-curl -X POST http://localhost:3000/api/user -H 'Content-Type: application/json' -d '{"user":"user","password":"pw"}'
+curl -X POST http://localhost:3000/api/user -H 'Content-Type: application/json' -d '{"name":"name","password":"pw"}'
 curl -X GET http://localhost:3000/api/user
 curl -X GET http://localhost:3000/api/user/1
-curl -X PUT http://localhost:3000/api/user/1 -H 'Content-Type: application/json' -d '{"user":"user","password":"pw"}'
+curl -X PUT http://localhost:3000/api/user/1 -H 'Content-Type: application/json' -d '{"name":"name","password":"pw"}'
 curl -X DELETE http://localhost:3000/api/user/1
             </pre>
         </blockquote>
